<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Testes AOSP - Positivo</string>
    <string name="repair_shortcut_name">Reparo - Testes AOSP - Positivo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_with">TestWithActivity</string>
    <string name="holdAsImage">Segure o aparelho conforme a imagem</string>
    <string name="title_activity_camera_test">Teste de Câmera</string>
    <string name="title_activity_touchpanel_test">Teste do Touch Panel</string>
    <string name="title_activity_activity_hdmi_test">Teste do HDMI</string>
    <string name="title_activity_activity_hardware_keys_test">Teste Teclas de Hardware Android</string>
    <string name="device_admin_desc">Acesso administrador do dispositivo para o Framework de Testes Positivo.</string>
    <string name="key_power_label">Power</string>
    <string name="key_volume_up_label">Volume +</string>
    <string name="key_volume_down_label">Volume -</string>
    <string name="key_back_label">Cancelar</string>
    <string name="key_home_label">Home</string>
    <string name="key_recent_label">Recent</string>
    <string name="key_left_label">Left</string>
    <string name="key_1_label">1</string>
    <string name="key_2_label">2</string>
    <string name="key_3_label">3</string>
    <string name="key_4_label">4</string>
    <string name="key_5_label">5</string>
    <string name="key_6_label">6</string>
    <string name="key_7_label">7</string>
    <string name="key_8_label">8</string>
    <string name="key_9_label">9</string>
    <string name="key_star_label">*</string>
    <string name="key_0_label">0</string>
    <string name="key_well_label">#</string>
    <string name="key_enter_label">Enter</string>
    <string name="key_del_label">Corrigir</string>
</resources>
