<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:focusable="false"
	android:theme="@style/FullscreenTheme"
    android:paddingLeft="10dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<!--<TextView
			android:id="@+id/key_powerkey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_power_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="30sp" />-->

		<TextView
			android:id="@+id/key_volumeupkey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_volume_up_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="30sp" />

		<TextView
			android:id="@+id/key_volumedownkey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_volume_down_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="30sp" />
    </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<TextView
			android:id="@+id/key_num_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_1_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_2_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_3_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_back_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="36sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<TextView
			android:id="@+id/key_num_4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_4_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_5_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_6_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_left"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_del_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="36sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<TextView
			android:id="@+id/key_num_7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_7_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_8_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_9"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_9_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_entkey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_enter_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="36sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<TextView
			android:id="@+id/key_star"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_star_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_num_0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_0_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />

		<TextView
			android:id="@+id/key_pound"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/key_well_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/key_test_color"
			android:textSize="118sp" />
    </LinearLayout>

	<br.com.positivo.utils.CieloKeyeventView
		android:id="@+id/cieloKeyeventView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusable="false"
		android:layout_alignParentBottom="true"/>
</LinearLayout>
